base/svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: nginx-demo
  name: nginx-service
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: nginx-demo
  sessionAffinity: None
  type: ClusterIP
